# onnyx

./: .gitignore  Cargo.toml  Makefile  diagram.json  flake.nix  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
src/: executor.rs  led_manager.rs  main.rs
src/executor/: enums.rs
src/executor/errors/: executor_errors.rs
