[package]
name = "Onnyx"
authors = ["Levy-Y <65444028+Levy-Y@users.noreply.github.com>"]
version = "0.1.0"
edition = "2024"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32-s3"]
description = "A reimagined USB Rubber Ducky firmware written in rust for the esp32-s3"
repository = "https://github.com/Levy-Y/onnyx"
license = "GNU AGPLv3"
readme = "README.md"

[[bin]]
name = "Onnyx"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]


[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"
esp-idf-sys = "0.36.1"
embedded-graphics = "0.8.1"
kolibri-embedded-gui = "0.1.0"
anyhow = "1.0.100"
apa102-spi = "0.5"
smart-leds = "0.4"

[build-dependencies]
embuild = "0.33"
